use boost_signals2

--- a/ms_build/example/example.vcxproj
+++ b/ms_build/example/example.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)../../;E:\local\boost_1_85_0;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)../../;$(ProjectDir)../../../boost_signals2;E:\local\boost_1_95_0;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)$(Platform)\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
