--- a/ms_build/libZhen/libZhen.vcxproj
+++ b/ms_build/libZhen/libZhen.vcxproj
@@ -117,7 +117,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)../../;$(ProjectDir)../../../boost_signals2;E:\local\boost_1_95_0;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)../../;E:\VCLAB\component\boost_signals2;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
